# CalcTACF

PythonProject5/: app.py  calculator.py  pyproject.toml
PythonProject5/static/css/: style.css
PythonProject5/static/js/: script.js
PythonProject5/templates/: index.html  results.html
